[package]
name = "unrust"
version = "0.1.1"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
cgmath = "0.16.1"
webgl = {path="webgl"}
uni-app = {path="uni-app"}
uni-glsl = {path="uni-glsl"}
uni-snd = {path="uni-snd"}
uni-pad = {path="uni-pad"}
unrust-derive= {path="unrust-derive"}

futures = "0.1"
obj = "0.8.2"
bitflags = "1.0"
fnv = "1.0.3"
hound="3.3.1"
# for profiling
flame = { version = "0.2.0", optional = true }
flamer = { version = "^0.2.0", optional = true }
typed-arena = "1.3.0"

[dev-dependencies]
nalgebra   = "0.13"
nphysics3d = "0.7.2"
ncollide = "0.13.0"
alga = "0.5"

[dependencies.lazy_static]
version = "1.0"

# Image related dependencies
[dependencies.image]
# version = "*"
git = "https://github.com/edwin0cheng/image"
branch = "impl_tga_read_scanline"
default-features = false
features = ["png_codec", "tga"]

[replace]
"rustc-serialize:0.3.24" = { path = "wasm-rustc-serialize" }

[features]
default = []
flame_it = ["flame", "flamer"]