[package]
name = "unrust"
version = "0.1.1"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
cgmath = "0.16.1"
uni-gl = "0.1.*"
uni-app = "0.1.*"
uni-glsl = {git="https://github.com/unrust/uni-glsl"}
uni-snd = "0.1.*"
uni-pad = {path="uni-pad"}
unrust-derive= {path="unrust-derive"}

futures = "0.1"
obj = "0.8.2"
bitflags = "1.0"
fnv = "1.0.3"
hound="3.3.1"
# for profiling
flame = { version = "0.2.0", optional = true }
flamer = { version = "^0.2.0", optional = true }
typed-arena = "1.3.0"

[dev-dependencies]
nalgebra   = "0.14.3"
nphysics3d = "0.8.1"
ncollide3d = "0.15.2"
alga = "0.5.4"

[dependencies.lazy_static]
version = "1.0"

# Image related dependencies
[dependencies.image]
version = "0.19.0"
default-features = false
features = ["png_codec", "tga"]

[features]
default = []
flame_it = ["flame", "flamer"]