[package]
name = "uni-glsl"
version = "0.1.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]

[lib]
name = "uni_glsl"
path = "src/lib.rs"

[[bin]]
name = "uni_glsl_demo"
path="src/main.rs"

[dependencies.lazy_static]
version = "1.0"
features = ["nightly"]

[dependencies.nom]
version = "4.0.0-alpha2"
default-features = false
features = []