[package]
name = "webgl"
version = "0.1.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]

[dependencies]
glenum = { git = "https://github.com/oussama/glenum-rs.git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb =  "*"