[package]
name = "webgl"
version = "0.1.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb =  "0.4.0"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"